# inventory-api/app/Http/Resources/Api/ProductVariantResource.php
@@ -25,6 +25,11 @@ class ProductVariantResource extends JsonResource
             'id' => $this->id,
             'sku' => $this->sku,
             'price' => $this->price,
+            'cost_price' => $this->cost_price,
+            'average_cost' => $this->average_cost,
+            'total_purchased_quantity' => $this->total_purchased_quantity,
+            'profit_margin' => $this->profit_margin,
+            'profit_amount' => $this->profit_amount,
             'product_id' => $this->product_id,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
